--- a/style/scss/Layout/_section.scss
+++ b/style/scss/Layout/_section.scss
@@ -9,7 +9,7 @@ section {
     & h2 {
         font-size: 20px;
         margin-bottom: 20px;
-        text-align: center;
+        color: v.$second-color;
     }
     & form {
         display: flex;
